# ros-repo-3

./: .gitmodules  README.md
ai_server/ai_server_test/src/ai_server/: package.xml  setup.py
ai_server/obstacle_detector/src/pollibot_obstacle_detector_pkg/: package.xml  setup.cfg  setup.py
ai_server/src/ai_server_msgs/: CMakeLists.txt  package.xml
ai_server/src/ai_server_msgs/msg/: FlowerDetectedObject.msg  FlowerDetectedObjects.msg  ObstacleDetectedObject.msg  ObstacleDetectedObjects.msg  TreeStateDetectedObject.msg
ai_server/src/ai_server_pkg/: package.xml  setup.cfg  setup.py
ai_server/src/ai_server_pkg/ai_server_pkg/: obstacle.py  pollination.py  tree_status.py
ai_server/src/ai_server_pkg/launch/: ai_server.launch.py
appleCare_server/pollitask_service/pollitask_service/: CMakeLists.txt  package.xml
appleCare_server/pollitask_service/pollitask_service/src/: depthcam_sub.py
applecare_server/applecare_server/: main_server_bridge.yaml
applecare_server/applecare_service/DB_manager_pkg/: package.xml  setup.cfg  setup.py
applecare_server/applecare_service/DB_manager_pkg/DB_manager_pkg/: DB_manager.py
applecare_server/applecare_service/DB_manager_pkg/test/: DB_test.py
applecare_server/applecare_service/applecare_msgs/: CMakeLists.txt
applecare_server/applecare_service/applecare_msgs/msg/: ReturnTopic.msg  TaskRequest.msg
applecare_server/applecare_service/applecare_msgs/srv/: DBCommand_old.srv
applecare_server/applecare_service/applecare_service/: CMakeLists.txt
applecare_server/applecare_service/applecare_service/config/: map.pgm  waypoints.yaml
applecare_server/applecare_service/applecare_service/launch/: controller_launch.py
applecare_server/applecare_service/applecare_service/src/: applecare_publisher.py  applecare_subscriber.py  map_publisher.py
applecare_server/applecare_service/gui_manager_msgs/: CMakeLists.txt
applecare_server/applecare_service/gui_manager_msgs/msg/: AreaDone.msg  TaskEvent.msg
applecare_server/applecare_service/gui_manager_msgs/srv/: DBCommand.srv
applecare_server/applecare_service/path_coordinate_dispathcer/: package.xml
applecare_server/applecare_service/path_coordinate_dispathcer/config/: custom_view.rviz  map.yaml
applecare_server/applecare_service/path_coordinate_dispathcer/launch/: waypoint_setter_launch.py
applecare_server/applecare_service/path_coordinate_dispathcer/src/: controller_node.py  waypoint_setter.py
applecare_server/applecare_service/robot_slam/: README.MD
applecare_server/applecare_service/robot_slam/monibot_localization/: README.MD  package.xml  setup.cfg  setup.py
applecare_server/applecare_service/robot_slam/slam_cartographer/: CMakeLists.txt  README.MD  package.xml
applecare_server/applecare_service/task_manager/: task_manager.py  task_topic_subscriber_class.py
applecare_server/applecare_service/task_manager_pkg/: package.xml  setup.py
applecare_server/applecare_service/task_manager_pkg/task_manager_pkg/: task_manager.py
applecare_server/monibot_path/: README.MD
applecare_server/monibot_path/slam_cartographer/: CMakeLists.txt  package.xml
applecare_server/monibot_path/slam_cartographer/config/: monibot_2d.lua  monibot_imu_2d.lua
applecare_server/pollibot_path/: waypoint_pub.py
applecare_server/pollitask_service/: README.md
applecare_server/pollitask_service/3d_pose_estimator/: CMakeLists.txt  package.xml
applecare_server/pollitask_service/3d_pose_estimator/launch/: pose_estimate.launch.py
applecare_server/pollitask_service/3d_pose_estimator/src/: frame_sub.py  pointcloud_processor.cpp  raw_ebimu_sub.py
applecare_server/pollitask_service/pollibot_arm/: setup.cfg
applecare_server/pollitask_service/pollitask_service/src/: ebimu_sub.py  (+2 more)
applecare_server/pollitask_service/trajectory_planner/pollibot_arm_description/: CMakeLists.txt
applecare_server/pollitask_service/trajectory_planner/pollibot_arm_description/config/: kinematics.yaml  ompl_planning.yaml
applecare_server/pollitask_service/trajectory_planner/pollibot_arm_description/launch/: moveit_planning_execution.launch.py
applecare_server/pollitask_service/trajectory_planner/pollibot_arm_description/meshes/visual/: link_1.stl
applecare_server/pollitask_service/trajectory_planner/pollibot_arm_description/moveit_config/: joint_limits.yaml
applecare_server/pollitask_service/trajectory_planner/pollibot_arm_description/rviz/: pollibot.rviz
applecare_server/pollitask_service/trajectory_planner/pollibot_arm_description/srdf/: pollibot_arm.srdf
applecare_server/pollobot_server/: waypoint_follower.py
client_pc/: README.md
moni_bot/: README.md
moni_bot/ebimu_generator/: package.xml  setup.cfg  setup.py
moni_bot/ebimu_generator/ebimu_generator/: ebimu_pub.py  madgwick_imu_pub.py  raw_imu_pub.py
moni_bot/ebimu_generator/launch/: imu_launch.py
polli_bot/arm_manipulator/: README.md
polli_bot/arm_manipulator/arduino/: arduino_servo_control.ino
polli_bot/arm_manipulator/pollibot_arduino/: package.xml  setup.cfg  setup.py
polli_bot/arm_manipulator/pollibot_arm/: package.xml
polli_bot/arm_manipulator/pollibot_arm_description/: CMakeLists.txt  package.xml
polli_bot/arm_manipulator/pollibot_control/: CMakeLists.txt  package.xml
polli_bot/arm_manipulator/pollibot_control/launch/: move_to_ready_pose.launch.py  move_to_target.launch.py  search_IK_solver.launch.py  start_push.launch.py
polli_bot/arm_manipulator/pollibot_control/src/: move_to_ready_pose.cpp  move_to_target.cpp  pollitask_node.py  search_IK_solver.cpp  start_push.cpp
polli_bot/arm_manipulator/pollibot_moveif_config/: .setup_assistant  CMakeLists.txt
polli_bot/arm_manipulator/pollibot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
polli_bot/arm_manipulator/pollibot_python_control/: package.xml  setup.cfg  setup.py
polli_bot/arm_manipulator/pollination_manager/: CMakeLists.txt  package.xml
polli_bot/arm_manipulator/pollination_manager/launch/: generate_sensors.launch.py
polli_bot/arm_manipulator/pollination_manager/src/: ebimu_pub.py  frame_generator.py  pointcloud_generator.cpp  raw_ebimu_pub.py
(+140 files in other folders)
